[gd_scene load_steps=3 format=1]

[ext_resource path="res://levels/abstract_level.gd" type="Script" id=1]
[ext_resource path="res://tilesets/tileset_solids.tres" type="TileSet" id=2]

[node name="root" type="Node"]

script/script = ExtResource( 1 )

[node name="topleft_level_area" type="Position2D" parent="."]

transform/pos = Vector2( -1500, -1000 )

[node name="bottomright_level_area" type="Position2D" parent="."]

transform/pos = Vector2( 1500, 1000 )

[node name="topleft_base_area" type="Position2D" parent="."]

transform/pos = Vector2( -900, -400 )

[node name="bottomright_base_area" type="Position2D" parent="."]

transform/pos = Vector2( 900, 400 )

[node name="content" type="Node2D" parent="."]

[node name="solids" type="TileMap" parent="content"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="entities" type="Node2D" parent="content"]


